# source_grounding_auditor

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: analyzer.py  citation_parser.py  citation_units.py  claim_aware_source_role_classifier.py  claim_extractor.py  display_status_mapper.py  document_evidence_graph_builder.py  evidence_graph_builder.py  evidence_snippet_retriever.py  main.py  official_domain_verifier.py  ratio_reporter.py  review_queue_builder.py  schemas.py  semantic_snippet_reranker.py  source_classifier.py  source_entity_resolver.py  source_fetcher.py  source_overrides.py  support_checker.py  terminal_classifier.py  upstream_tracer.py
backend/app/providers/: codex_claim_extractor.py  llm_provider.py  openai_claim_extractor.py  search_provider.py
backend/app/static/: index.html
backend/tests/: test_api.py  test_citation_anchored_analyzer.py  test_citation_anchored_parser.py  test_citation_parser.py  test_citation_unit_binding.py  test_claim_extraction.py  test_display_status_and_evidence_graph.py  test_llm_first_review_categories.py  test_openai_claim_extractor.py  test_ratio_report.py  test_semantic_snippet_retriever.py  test_source_fetcher.py  test_support_checker.py  test_terminal_classifier.py
docs/: PRD.md
examples/: codex_request.json  sample_request.json  sample_response.json  web_search_request.json
